# glassbase

./: .gitignore  main.py  pyproject.toml
AI4EMDesign/: .gitignore  PROBLEM.md  README.md
AI4EMDesign/.agents/skills/experiment-report/: SKILL.md
AI4EMDesign/.agents/skills/training/: SKILL.md
AI4EMDesign/conf/: rl.conf  surrogate.conf  surrogate_s11.conf
AI4EMDesign/data/: README.md  analysze.py  preprocess_s2p.py  preprocess_s4p.py  read_example.py  split.py  split_topology.py  transfer_flattened.py
AI4EMDesign/experiment/s2p_s11_02/: experiment_report.md
AI4EMDesign/scripts/: evaluate_s11.py  evaluate_test_set.py  infer_and_compare.py  train.sh
AI4EMDesign/src/: registry.py
AI4EMDesign/src/config/: __init__.py
AI4EMDesign/src/data/: __init__.py  parquet_dataset.py
AI4EMDesign/src/loss/: __init__.py
AI4EMDesign/src/models/: __init__.py  policy.py  resnet.py
AI4EMDesign/src/optimizer/: __init__.py
AI4EMDesign/src/policy_model_training/: engine.py  infer.py  main.py
AI4EMDesign/src/reward/: __init__.py  band_rew.py
AI4EMDesign/src/scheduler/: __init__.py
AI4EMDesign/src/surrogate_model_training/: engine.py  main.py
AI4EMDesign/src/torchutils/: common.py  registry.py  serialization.py
AI4EMDesign/tests/: test_parquet_dataset.py
